<resources>
    <string name="app_name">FStore</string>
    <string name="find_your_gadget">Find Your Gadget</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
</resources>