<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:background="@color/primary_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Top container-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fontFamily="@font/raleway_extrabold"
                android:gravity="center"
                android:paddingVertical="50dp"
                android:text="@string/welcome_back"
                android:background="@drawable/welcome_bg"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <!--Main container-->
            <LinearLayout
                android:paddingBottom="50dp"
                android:paddingTop="30dp"
                android:paddingHorizontal="30dp"
                android:background="@drawable/top_cornered_bg"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_bold"
                    android:text="Login"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--Email-->
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:paddingStart="2dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/mail"
                        app:tint="@color/grey"/>

                    <TextView
                        android:paddingStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="Email"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password-->
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:paddingStart="2dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/lock"
                        app:tint="@color/grey"/>

                    <TextView
                        android:paddingStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="Password"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/password_et"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary_purple" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/raleway_semibold"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/login"
                    app:cornerRadius="@dimen/corner_radius"/>

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/create_account"
                    android:gravity="center"
                    android:textColor="@color/primary_purple" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>